--- a/OfficialDSStatus.csproj
+++ b/OfficialDSStatus.csproj
@@ -5,9 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-	<ItemGroup>
-		<Reference Include="CounterStrikeSharp.API">
-			<HintPath>../counterstrikesharp/api/CounterStrikeSharp.API.dll</HintPath>
-		</Reference>
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CounterStrikeSharp.API" Version="*" />
+  </ItemGroup>
 </Project>
